@@ -154,6 +154,10 @@ class tx_rtehtmlarea_dam_browse_links extends tx_dam_browse_media {
 			$this->mode='rte';
 		}
 
+			// init fileProcessor
+		$this->fileProcessor = t3lib_div::makeInstance('t3lib_basicFileFunctions');
+		$this->fileProcessor->init($GLOBALS['FILEMOUNTS'], $GLOBALS['TYPO3_CONF_VARS']['BE']['fileExtensions']);
+		
 			// init hook objects:
 		$this->hookObjects = array();
 		if (is_array($TYPO3_CONF_VARS['SC_OPTIONS']['typo3/class.browse_links.php']['browseLinksHook'])) {
@@ -505,6 +509,10 @@ class tx_rtehtmlarea_dam_browse_links extends tx_dam_browse_media {
 			// Initializing the action value, possibly removing blinded values etc:
 		$this->allowedItems = explode(',','page,file,url,mail,spec,upload');
 
+			// Remove upload tab if filemount is readonly
+		if ($this->isReadOnlyFolder(tx_dam::path_makeAbsolute($this->damSC->path))) {
+			$this->allowedItems = array_diff($this->allowedItems, array('upload'));
+		} 
 			//call hook for extra options
 		foreach($this->hookObjects as $hookObject) {
 			$this->allowedItems = $hookObject->addAllowedItems($this->allowedItems);
