@@ -3,7 +3,7 @@
 *  Copyright notice
 *
 *  (c) 1999-2008 Kasper Skaarhoj (kasper@typo3.com)
-*  (c) 2004-2008 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
+*  (c) 2004-2008 Stanislas Rolland <typo3(arobas)sjbr.ca>
 *  All rights reserved
 *
 *  This script is part of the TYPO3 project. The TYPO3 project is
@@ -160,6 +160,11 @@ class tx_rtehtmlarea_dam_browse_media extends tx_dam_browse_media {
 			$this->act='magic';
 		}
 
+			// init fileProcessor
+		$this->fileProcessor = t3lib_div::makeInstance('t3lib_basicFileFunctions');
+		$this->fileProcessor->init($GLOBALS['FILEMOUNTS'], $GLOBALS['TYPO3_CONF_VARS']['BE']['fileExtensions']);
+		
+		
 		$RTEtsConfigParts = explode(':', $this->RTEtsConfigParams);
 		$RTEsetup = $BE_USER->getTSConfig('RTE',t3lib_BEfunc::getPagesTSconfig($RTEtsConfigParts[5]));
 		$this->thisConfig = t3lib_BEfunc::RTEsetup($RTEsetup['properties'],$RTEtsConfigParts[0],$RTEtsConfigParts[2],$RTEtsConfigParts[4]);
@@ -847,10 +852,8 @@ class tx_rtehtmlarea_dam_browse_media extends tx_dam_browse_media {
 		global $TYPO3_CONF_VARS, $TYPO3_DB;
 
 		$filearray = array();
- 		//
-		// Use the current selection to create a query and count selected records
-		//
 
+			// Use the current selection to create a query and count selected records
 		$this->damSC->selection->addSelectionToQuery();
 		$this->damSC->selection->qg->query['FROM']['tx_dam'] = tx_dam_db::getMetaInfoFieldList(true, array('hpixels','vpixels',$this->imgTitleDAMColumn,'alt_text'));
 		#$this->damSC->selection->qg->addSelectFields(...
@@ -901,9 +904,8 @@ class tx_rtehtmlarea_dam_browse_media extends tx_dam_browse_media {
 				}
 			}
 		}
-
 		return $filearray;
- 	}
+	}
 
 	/**
 	 * [Describe function...]
@@ -915,10 +917,13 @@ class tx_rtehtmlarea_dam_browse_media extends tx_dam_browse_media {
 
 		$path = tx_dam::path_makeAbsolute($this->damSC->path);
 		if (!$path OR !@is_dir($path))	{
-			$fileProcessor = t3lib_div::makeInstance('t3lib_basicFileFunctions');
-			$fileProcessor->init($GLOBALS['FILEMOUNTS'], $GLOBALS['TYPO3_CONF_VARS']['BE']['fileExtensions']);
-			$path = $fileProcessor->findTempFolder().'/';	// The closest TEMP-path is found
+				// The closest TEMP-path is found
+			$path = $this->fileProcessor->findTempFolder().'/';
 		}
+			 // Remove upload tab if filemount is readonly
+		if ($this->isReadOnlyFolder($path)) {
+			$this->allowedItems = array_diff($this->allowedItems, array('upload'));
+		} 
 		$this->damSC->path = tx_dam::path_makeRelative($path); // mabe not needed
 
 			// Starting content:
