@@ -6,6 +6,8 @@
 2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
+	* Fixed bug #9320: Adding a new mount-type "readonly" for temporary filemounts (thanks to Steffen Kamper)
+	* Added feature #8899: Configuration of uploads and create folder in linkbrowser (thanks to Steffen Kamper and Dmitry Dulepov)
 
 2008-09-18  Dmitry Dulepov  <dmitry@typo3.org>
 
